Tue May 29 00:15:35 UTC 2007  Scott Harris  <harris_s@ociweb.com>

        * TAO_IDL/be/be_visitor_native/native_ch.cpp:

          Fix a warning.

Mon May 28 12:29:13 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * orbsvcs/tests/Notify/lib/Driver.cpp:
        * orbsvcs/tests/Notify/lib/Periodic_Consumer.cpp:
        * orbsvcs/tests/Notify/lib/Periodic_Supplier.cpp:

          Addressed the "assignment within conditional expression" warning
          on the WinXP_VC71_WarningLevel4 build.

Mon May 28 05:06:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/RTCORBA/Explicit_Binding/run_test.pl:
        * tests/RTCORBA/Server_Protocol/run_test.pl:
        * tests/Two_Objects/run_test.pl:
          Updated for cross host testing

Mon May 28 01:01:09 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * orbsvcs/tests/Security/Bug_2908_Regression/MessengerServer.cpp:
        * orbsvcs/tests/Security/Crash_Test/client.cpp:

          Addressed "unreferenced local variable" warning on the
          WinXP_VC8_Versioned_Namespace build.

Sun May 27 15:35:46 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * orbsvcs/examples/Notify/Lanes/Consumer_Client.cpp:
        * orbsvcs/examples/Notify/Lanes/Supplier_Client.cpp:
        * orbsvcs/examples/Notify/ThreadPool/Consumer_Client.cpp:
        * orbsvcs/examples/Notify/ThreadPool/Supplier_Client.cpp:
        * orbsvcs/tests/Event/ThreadFlags/testflags.cpp:
        * orbsvcs/tests/Notify/Basic/AdminProperties.cpp:
        * orbsvcs/tests/Notify/Basic/ConnectDisconnect.cpp:
        * orbsvcs/tests/Notify/Basic/Events.cpp:
        * orbsvcs/tests/Notify/Basic/IdAssignment.cpp:
        * orbsvcs/tests/Notify/Basic/LifeCycle.cpp:
        * orbsvcs/tests/Notify/Basic/Sequence.cpp:
        * orbsvcs/tests/Notify/Basic/Simple.cpp:
        * orbsvcs/tests/Notify/RT_lib/RT_POA_Command.cpp:
        * orbsvcs/tests/Notify/performance-tests/RedGreen/RedGreen_Test.cpp: