@@ -10,8 +10,10 @@ use PerlACE::Run_Test;
 
 $status = 0;
 
-$iorfile1 = PerlACE::LocalFile ("test1.ior");
-$iorfile2 = PerlACE::LocalFile ("test2.ior");
+$iorfile1base = "test1.ior";
+$iorfile2base = "test2.ior";
+$iorfile1 = PerlACE::LocalFile ("$iorfile1base");
+$iorfile2 = PerlACE::LocalFile ("$iorfile2base");
 
 unlink $iorfile1;
 unlink $iorfile2;
@@ -47,26 +49,31 @@ if (PerlACE::is_vxworks_test()) {
 else {
     $SV = new PerlACE::Process ("server", $server_args);
 }
-$CL = new PerlACE::Process ("client", "-n file://$iorfile1 -o file://$iorfile2");
+if (PerlACE::is_vxworks_rtp_test()) {
+    $CL = new PerlACE::ProcessVX ("client", "-n file://$iorfile1base -o file://$iorfile2base");
+}
+else {
+    $CL = new PerlACE::Process ("client", "-n file://$iorfile1 -o file://$iorfile2");
+}
 
 $SV->Spawn();
-if (PerlACE::waitforfile_timed ($iorfile2, $PerlACE::wait_interval_for_process_creation) == -1) 
+if (PerlACE::waitforfile_timed ($iorfile2, $PerlACE::wait_interval_for_process_creation) == -1)
 {
     $server = $SV->TimedWait (1);
-    if ($server == 2) 
+    if ($server == 2)
     {
         # Mark as no longer running to avoid errors on exit.
         $SV->{RUNNING} = 0;
         exit $status;
     }
-    else 
+    else
     {
         print STDERR "ERROR: cannot find file <$iorfile2>\n";
         $SV->Kill ();
         exit 1;
     }
 }
- 
+
 $client = $CL->SpawnWaitKill (60);
 
 if ($client != 0) {
@@ -76,7 +83,7 @@ if ($client != 0) {
 
 $server = $SV->WaitKill (30);
 
-if ($server != 0) 
+if ($server != 0)
 {
     print STDERR "ERROR: server returned $server\n";
     $status = 1;
